October 5, 2021 pitbox46
-Fixed bug with returning winners on a timed event

October 4, 2021 pitbox46
-Better error logging/error handling
-Timed events now work
-Localization for winner message
-Calling get on the registered event map will now return a copy of the event so objects don't get shared between multiple instances of the same event.

October 4, 2021 pitbox46
-Fixed issue with forceStart command
-Updated example Events.js because Nashorn doesn't include the newest JavaScript features
-Added "broadcast_message" optional return element to functions

October 2, 2021 pitbox46
-Most errors now stop the event rather than potentially crashing the game
-Added ability to start specific script
-Added force reload command